--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -13,6 +13,10 @@ body {
 #content {
   margin-top: 35px;
 
+  .padding-container {
+    padding: 5px 20px;
+  }
+
   .navbar {
     z-index: 4;
     border-radius: 0;
@@ -27,7 +31,7 @@ body {
   #slider {
     position: relative;
     margin-top: -20px;
-    background-image: url("/assets/slider/01.jpg");
+    background-image: url(image_path("slider/01.jpg"));
     width: 100%;
     height: 634px;
 
