Fixed tests (adding rspec next). Created gallery overview view.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,3 +29,12 @@
 // @linkColor: #ff0000;
 @import "variables.css.less";
 @import "bootswatch.css.less";
+
+.gallery-picture {
+  border-radius: @border-radius-base;
+  border: 1px solid @panel-primary-border;
+}
+
+.gallery-picture:hover {
+
+}
