Didnt know what I changed last time. Forgott to commit :( .

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -19,6 +19,10 @@ body {
 
   .padding-container {
     padding: 5px 20px;
+
+    .row-margin-bottom {
+      margin-bottom: 15px;
+    }
   }
 
   .navbar {
