--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -33,8 +33,9 @@
 .gallery-picture {
   border-radius: @border-radius-base;
   border: 1px solid @panel-primary-border;
+  cursor: pointer;
 }
 
 .gallery-picture:hover {
-
+  border: 1px solid black;
 }
