Competed image seeding (file walker) and loading (splitted into load picture, thumbnail or box_image).

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -16,7 +16,7 @@
               <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
             </div>
             <div class="panel-body">
-              Panel content
+              <img src="<%= box_picture_path(g.picture) %>" alt="<%= g.picture.filename %>" />
             </div>
           </div>
         </div>
